--- a/gb/13/7/9/n3912343.md
+++ b/gb/13/7/9/n3912343.md
@@ -1,10 +1,9 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tyhool308/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/tyhool308/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/tyhool308/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tyhool308/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/tyhool308/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tyhool308/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/tyhool308/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tyhool308/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/tyhool308/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tyhool308/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/tyhool308/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tyhool308/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/tyhool308/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tyhool308/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/tyhool308/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tyhool308/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/tyhool308/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/tyhool308/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/tyhool308/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/tyhool308/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tyhool308/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/tyhool308/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tyhool308/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tyhool308/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tyhool308/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tyhool308/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tyhool308/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tyhool308/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tyhool308/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tyhool308/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tyhool308/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tyhool308/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tyhool308/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/tyhool308/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tyhool308/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tyhool308/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tyhool308/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tyhool308/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tyhool308/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tyhool308/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tyhool308/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tyhool308/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tyhool308/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/tyhool308/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tyhool308/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tyhool308/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tyhool308/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/xsumwp3307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>多伦多遭暴雨袭击 60年不遇 供电“命悬一线”</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2013/07/1307090124581117-600x400.jpg" />
-<h6>图：2013年7月8日，在多伦多湖滨大道，一个妇女在暴雨期间走下车来检查她的车的状况。（加通社）
-</h6>
+
+<h6></h6>
 <hr>
 	<p>【大纪元2013年07月09日讯】（大纪元记者李平多伦多综合报导）周一晚，大多区创历史记录的降雨量使许多路段的交通堵塞停滞，导致大多伦多地区约86万户居民断电，其中多伦多占30万户，部分民宅进水被淹，截至周二（7月9日）上午，雨水虽有所退却，大部分供电恢复，但多伦多区交通尚未完全恢复。</p>
 <p>市长福特周二早上表示，对昨晚救灾工作表示满意，但呼吁民众节约用电，因为供电系统仍“命悬一线”。</p>
@@ -12,10 +11,8 @@
 <p>加拿大环境部数据显示，大多区周一暴雨天气打破1954年Hazel飓风创下的121.4毫米的单日降雨量记录，仅皮尔逊机场降雨量就高达126毫米；环境部表示，此次降雨量是多伦多历史上首次，周二下午安省南部有更多雷暴天气，周二晚会有强风和暴雨，周三雷暴天气会进一步带来冰雹和强风天气。</p>
 <p>加拿大广播公司（CBC）气象员斯科兰德（Jay Scotland）表示，此前就已经预测到多伦多有大雨天气，但没想到是这么大的降雨。</p>
 <p>多市议员、市府公共工程与基建委员会主席黄旻南（Denzil Minnan-Wong）周二上午表示，如果多市每隔几年就发生一次Hazel 这样的飓风天气，情况就要比我们想像得要糟得多，如果现在不重视起来，这种风暴天气会对城市基础设施造成严重破坏，尤其是对居民住宅造成的破坏最大，人们第二天早上一起来会发现地下室到处是积水。</p>
-<figure id="attachment_6722706" style="width: 600px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2013/07/1307091304531117-600x402.jpg" alt="7月8号，大多伦多地区遭遇60年不遇暴雨，多処地段水淹。图为穿越多伦多城区的高速公路被水浸情况。（路透社，仅加拿大用）" title="7月8号，大多伦多地区遭遇60年不遇暴雨，多処地段水淹。图为穿越多伦多城区的高速公路被水浸情况。（路透社，仅加拿大用）" width="600" b="402"
-	class="size-large wp-image-6722706" /></a><figcaption class="wp-caption-text">7月8号，大多伦多地区遭遇60年不遇暴雨，多処地段水淹。图为穿越多伦多城区的高速公路被水浸情况。（路透社，仅加拿大用）</figcaption></figure>
-<figure id="attachment_6722716" style="width: 600px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2013/07/130709135922985-600x379.jpg" alt="周一晚，近1000人因GO火车进水被淹而被搁浅，警方和消防部门花了7个小时才疏散所有被困的通勤人员。（路透社，仅加拿大用）" title="周一晚，近1000人因GO火车进水被淹而被搁浅，警方和消防部门花了7个小时才疏散所有被困的通勤人员。（路透社，仅加拿大用）" width="600" b="379"
-	class="size-large wp-image-6722716" /></a><figcaption class="wp-caption-text">周一晚，近1000人因GO火车进水被淹而被搁浅，警方和消防部门花了7个小时才疏散所有被困的通勤人员。（路透社，仅加拿大用）</figcaption></figure>
+<figure id="attachment_6722706" aria-describedby="caption-attachment-6722706" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2013/07/1307091304531117-600x402.jpg" target="_blank" rel="noreferrer noopener"></a><figcaption id="caption-attachment-6722706" class="wp-caption-text">7月8号，大多伦多地区遭遇60年不遇暴雨，多処地段水淹。图为穿越多伦多城区的高速公路被水浸情况。（路透社，仅加拿大用）</figcaption></figure>
+<figure id="attachment_6722716" aria-describedby="caption-attachment-6722716" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2013/07/130709135922985-600x379.jpg" target="_blank" rel="noreferrer noopener"></a><figcaption id="caption-attachment-6722716" class="wp-caption-text">周一晚，近1000人因GO火车进水被淹而被搁浅，警方和消防部门花了7个小时才疏散所有被困的通勤人员。（路透社，仅加拿大用）</figcaption></figure>
 <p><B>全城交通一度瘫痪 </B></p>
 <p>周二上午，周一下午关闭的地铁线路中，多个线路已经恢复正常运行，但Bloor-Danforth线上的Kipling和Jane路段地铁因Kipling地铁积水严重尚未恢复，只能以地面巴士取代；市中心部分街车也因部分路段积水而不得不改变线路。</p>
 <p>DVP（Don Valley Parkway）高速周二上午恢复交通，但仍有部分路段因地下通常积水严重被封；GO火车也报多条线路因铁轨被雨水冲刷而受影响；GO巴士虽恢复运行，但也有部分线路被取消或推迟；皮尔逊机场当天上午发推透露，部分航班服务要比平常慢，乘客在出发前应再行确认。</p>
@@ -33,8 +30,7 @@
 <p>同样住在北约克的王太太表示，没有感觉到太大的雨，但因为停电，家里没有办法做饭，倒是星巴克依然营业，但是排着很长的队伍。</p>
 <p>停电不但给住家带来影响，也给很多商家带来影响。多伦多《大纪元》报社当天的值班编辑和记者的工作也都受到停电的影响，印刷厂直到今天凌晨，才恢复供电。</p>
 <p><B>总雨量超过90毫米 </B></p>
-<figure id="attachment_6722726" style="width: 600px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2013/07/1307090124231117-600x405.jpg" alt="（加通社）" title="（加通社）" width="600" b="405"
-	class="size-large wp-image-6722726" /></a><figcaption class="wp-caption-text">（加通社）</figcaption></figure>
+<figure id="attachment_6722726" aria-describedby="caption-attachment-6722726" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2013/07/1307090124231117-600x405.jpg" target="_blank" rel="noreferrer noopener"></a><figcaption id="caption-attachment-6722726" class="wp-caption-text">（加通社）</figcaption></figure>
 <p>加拿大环境部表示，是一个缓慢移动的“大雨能够产生局部山洪”的雷暴群袭击了大多伦多地区。环境部表示，当天部分地区总雨量超过90毫米，超过100毫米的降雨在晚间稍后逐渐减少。</p>
 <p>暴雨倾盆而下，大多区不少地区和道路发生淹水，包括多伦多市中心、密市以及烈治文山等等。在Yonge夹St. Clair、Eglinton Ave夹Bayview、Wilson Ave夹Highway 401、DVP（Don Valley Parkway），以及Dundas St地区，有的地方水深及脚背，有的地方齐膝深的水；而DVP上局部区段的水几乎淹没车顶；密市的著名购物中心Square One因淹水要求顾客撤离，而很多居民区也是“水漫金山”。</p>
 <p>社交网站挤满了市民，纷纷发放被水淹的人行道，街道，桥梁下，停车场，甚至在TTC巴士上的大水的照片。</p>
@@ -50,41 +46,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/tyhool308/djy/blob/master/gb/3/8/22/n363313.md#1">我所经历的多伦多大停电</a></li>
-<li><a href="https://github.com/tyhool308/djy/blob/master/gb/7/2/13/n1621403.md#1">加国生活：成为有车族的三步曲</a></li>
-<li><a href="https://github.com/tyhool308/djy/blob/master/gb/9/1/17/n2400084.md#1">多伦多严寒中停电影响十万人</a></li>
-<li><a href="https://github.com/tyhool308/djy/blob/master/gb/9/1/17/n2400457.md#1">多伦多大停电一天恢复正常</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/3/8/22/n363313.md#1">我所经历的多伦多大停电</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/7/2/13/n1621403.md#1">加国生活：成为有车族的三步曲</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/9/1/17/n2400084.md#1">多伦多严寒中停电影响十万人</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/9/1/17/n2400457.md#1">多伦多大停电一天恢复正常</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/tyhool308/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/10/n10045158.md#1" target="_blank">《苦菜花》人物原型的真实人生（1）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/10/23/n8423584.md#1" target="_blank">屡遭拘禁摧残16年 妇坚修法轮功神奇复原</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/21/1/23/n12707407.md#1" target="_blank">闻欣：钱学森为何拒绝反对法轮功？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/29/n11148760.md#1" target="_blank">林辉：抗战时毒杀日外交官 英雄难逃中共毒手</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/14/n11384505.md#1" target="_blank">欧洲名校毕业的一代骄子 难忘童年之痛</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/tyhool308/djy/blob/master/gb/21/1/26/n12711986.md#1">预言试析：共产党亡于何时？</a></li>
-<li><a href="https://github.com/tyhool308/djy/blob/master/gb/21/1/30/n12723183.md#1">【解密时分】懂得鸟语 历史上真有这样的人</a></li>
-<li><a href="https://github.com/tyhool308/djy/blob/master/gb/21/2/2/n12728948.md#1">【解密时分】斯里兰卡前总统转世农家男孩</a></li>
-<li><a href="https://github.com/tyhool308/djy/blob/master/gb/21/1/18/n12695507.md#1">【命理】被冤枉陷害的好人 皇天能不管吗？</a></li>
-<li><a href="https://github.com/tyhool308/djy/blob/master/gb/21/2/2/n12727507.md#1">2021年2月是个完美矩形 会有大事发生吗？</a></li>
-<li><a href="https://github.com/tyhool308/djy/blob/master/gb/21/2/4/n12733673.md#1">【财商天下】“吸血”巨头海航 神秘股权内幕</a></li>
-<li><a href="https://github.com/tyhool308/djy/blob/master/gb/21/1/27/n12715713.md#1">【重播】拜登外交讲话：中共是最严峻竞争者</a></li>
-<li><a href="https://github.com/tyhool308/djy/blob/master/gb/21/2/4/n12731874.md#1">【十字路口】世卫专家访武毒所 调查还是走秀？</a></li>
-<li><a href="https://github.com/tyhool308/djy/blob/master/gb/21/2/2/n12728421.md#1">分析：窃取党和国家权力 习的政敌是谁</a></li>
-<li><a href="https://github.com/tyhool308/djy/blob/master/gb/21/2/2/n12729074.md#1">【时事纵横】拜政府菜鸟级失误 中共促缅政变？</a></li>
-<li><a href="https://github.com/tyhool308/djy/blob/master/gb/21/2/3/n12730621.md#1">两岸十大政治人物排名 朱镕基居首习近平靠后</a></li>
-<li><a href="https://github.com/tyhool308/djy/blob/master/gb/21/2/3/n12729203.md#1">黎姿携三个女儿行山 粉丝意外聚焦一双波鞋</a></li>
-<li><a href="https://github.com/tyhool308/djy/blob/master/gb/21/2/4/n12733732.md#1">【解密时分】诺查丹玛斯预言：君主制回归</a></li>
-<li><a href="https://github.com/tyhool308/djy/blob/master/gb/21/2/3/n12731188.md#1">林依晨聚餐提前离席 雷佳音得知背后原因惊呆</a></li>
-<li><a href="https://github.com/tyhool308/djy/blob/master/gb/21/2/2/n12728875.md#1">获陈坤夸赞阳光又漂亮 杨颖默默点赞视频自励</a></li>
-<li><a href="https://github.com/tyhool308/djy/blob/master/gb/21/2/2/n12728687.md#1">“金马奖欠我一个影帝” 黄秋生誓言夺回奖座</a></li>
-<li><a href="https://github.com/tyhool308/djy/blob/master/gb/21/2/2/n12726885.md#1">立春要晚睡早起 吃2类食材升阳气又散寒</a></li>
-<li><a href="https://github.com/tyhool308/djy/blob/master/gb/21/2/4/n12731595.md#1">打喷嚏未必是坏事？起床做1件事 远离过敏性鼻炎</a></li>
-<li><a href="https://github.com/tyhool308/djy/blob/master/gb/21/2/3/n12729496.md#1">缅甸女子拍跳舞短片 不知身后发生军事政变</a></li>
-<li><a href="https://github.com/tyhool308/djy/blob/master/gb/21/2/2/n12727440.md#1">【重播】新冠1个症状藏大隐患 一定要警惕</a></li>
-<li><a href="https://github.com/tyhool308/djy/blob/master/gb/21/2/2/n12729103.md#1">检测海鲜、冰棒病毒有用吗？新冠检测3大疑问</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/4/n13726629.md#1">【命相漫谈】怎么说“财多如何不发财？”</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740262.md#1">【秦鹏直播】不让戴口罩 李克强和习杠上了？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/19/n13740815.md#1">【微视频】粮价涨多少？美国争论中国关税</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740248.md#1">【远见快评】美媒曝东航坠毁是人为 东航回应</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739318.md#1">备战台海 广东高层会议秘密录音曝光</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738761.md#1">获妈妈沈殿霞赠家传首饰 郑欣宜望代代相传</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739256.md#1">李克强讲话“上墙”党媒争相报 释何信号</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738761.md#1">获妈妈沈殿霞赠家传首饰 郑欣宜望代代相传</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739984.md#1">介绍田中老家 任贤齐吃喝不花钱 自嘲像恶霸</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739444.md#1">陈晓旭去世15周年 薛宝钗扮演者张莉贴照缅怀</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739808.md#1">搭飞机如何穿衣服比较好？ 空服员分享经验</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/14/n13736831.md#1">11种营养和饮食 改善成人过动症</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738702.md#1">【健康1+1】新冠、疫苗刺突蛋白 2大方法解毒</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tyhool308/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tyhool308/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/13/7/9/n3912343.htm">多伦多遭暴雨袭击 60年不遇 供电“命悬一线”</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/13/7/9/n3912343.htm">多伦多遭暴雨袭击 60年不遇 供电“命悬一线”</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/tyhool308/djy/blob/master/gb/13/7/9/n3912343.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tyhool308/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tyhool308/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tyhool308/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tyhool308/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tyhool308/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tyhool308/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tyhool308/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tyhool308/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tyhool308/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tyhool308/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tyhool308/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tyhool308/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tyhool308/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tyhool308/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tyhool308/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tyhool308/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tyhool308/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tyhool308/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/tyhool308/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tyhool308/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tyhool308/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tyhool308/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tyhool308/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tyhool308/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/tyhool308/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tyhool308/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tyhool308/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tyhool308/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tyhool308/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tyhool308/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tyhool308/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tyhool308/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tyhool308/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tyhool308/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tyhool308/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tyhool308/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tyhool308/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tyhool308/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tyhool308/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tyhool308/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tyhool308/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tyhool308/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tyhool308/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tyhool308/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tyhool308/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tyhool308/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tyhool308/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tyhool308/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/xsumwp3307/djy/blob/master/gb/13/7/9/n3912343.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
